--- a/_posts/week-1/week-1.Rmd
+++ b/_posts/week-1/week-1.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Week 1: First module"
+title: "Week 00 - Topic of the week"
 description: |
-  A short description of the post.
+  More information about this week's module.
 author:
   - name: Unknown
 date: 2022-04-08
@@ -15,8 +15,7 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-Distill is a publication format for scientific and technical writing, native to the web.
+# Learning outcomes
+More information about this week's learning outcomes.
 
-Learn more about using Distill at <https://rstudio.github.io/distill>.
-
-
+# Lecture slides and assignments
