--- a/_posts/week-2/week-2.Rmd
+++ b/_posts/week-2/week-2.Rmd
@@ -1,10 +1,9 @@
 ---
-title: "Week 2: First module"
+title: "Week 00 - Topic of the week"
 description: |
-  A short description of the post.
+  More information about this week's module.
 author:
   - name: Unknown
-    url: {}
 date: 2022-04-08
 output:
   distill::distill_article:
@@ -16,8 +15,7 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-Distill is a publication format for scientific and technical writing, native to the web.
+# Learning outcomes
+More information about this week's learning outcomes.
 
-Learn more about using Distill at <https://rstudio.github.io/distill>.
-
-
+# Lecture slides and assignments
