add note to week 1

--- a/_posts/week-1/week-1.Rmd
+++ b/_posts/week-1/week-1.Rmd
@@ -19,3 +19,4 @@ knitr::opts_chunk$set(echo = FALSE)
 More information about this week's learning outcomes.
 
 # Lecture slides and assignments
+- [Slides for Week 1, Day 1: Introductory lecture](https://dsci-123-fall2022.github.io/lectures/week-1/w1-l1/w1-l1)
